# pivot

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SIMULATE_MARKET.md  TESTING.md  docker-compose.yml  simulate_market.bat  simulate_market.sh  simulate_price.bat  simulate_price.sh  start.bat  start.sh
backend/: .env.example  Dockerfile  conftest.py  manage.py  pyproject.toml
backend/accounts/: __init__.py  models.py  serializers.py  test_views.py  urls.py  views.py
backend/ai/: discovery.py  encryption.py  models.py  news_context_policy.py  serializers.py  services.py  strategy_validation.py  tasks.py  test_context.py  test_discovery.py  test_strategy_validation.py  test_views.py  urls.py  views.py
backend/alerts/: admin.py  models.py  serializers.py  services.py  tasks.py  test_services.py  test_tasks.py  test_views.py  urls.py  views.py
backend/config/: apps.py  asgi.py  celery.py  exceptions.py  middleware.py  query_observability.py  settings.py  tasks.py  test_management_commands.py  throttling.py  urls.py
backend/markets/: admin.py  apps.py  backfill_progress.py  models.py  ohlcv_provider.py  quote_provider.py  repair_progress.py  seed_data.py  serializers.py  services.py  tasks.py  test_backfill_progress.py  test_management_commands.py  test_ohlcv_repair.py  test_ohlcv_validation.py  test_services.py  test_tasks.py  test_views.py  urls.py  views.py
backend/mcp/: apps.py  auth.py  models.py  serializers.py  services.py  test_views.py  urls.py  views.py
backend/portfolios/: admin.py  apps.py  models.py  serializers.py  services.py  test_views.py  (+2 more)
(+298 files in other folders)
